aws-eks/aws-ingress.yaml
# Copyright 2026 Cisco Systems, Inc. and its affiliates
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: onprem-runtime-ingress 
  namespace: <placeholder> 
  annotations: 
    kubernetes.io/ingress.class: nginx  # Links to NGINX Ingress Controller 
spec: 
  rules: 
  - host: <placeholder> 
    http: 
      paths: 
      - path: /api/v1/inspect 
        pathType: Prefix 
        backend: 
          service: 
            name: ai-defense-apigateway 
            port: 
              number: 8080 
      - path: / 
        pathType: Prefix 
        backend: 
          service: 
            name: ai-defense-proxy-service 
            port: 
              number: 8080 
  tls: 
  - hosts: 
    - example.com 
    secretName: aid-tls-secret  # TLS secret for HTTPS
